form dir_wagon test add save & group update fix bag

--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -251,7 +251,7 @@
     </form>
 </div>
 
-<div id="add_edit" title="" style="display:none">
+<div id="add_edit" title="" style="display:none" class="form_add_edit_wagon">
     <div class="alert" id="add_edit_alert"></div>
     <form id="form_add_edit">
         <div>
@@ -478,7 +478,6 @@
         @*Allow form submission with keyboard without duplicating the dialog button*@
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
     </form>
-
 </div>
 
 
