--- a/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
@@ -59,9 +59,13 @@
                             @*<label id="sostav_info"></label>*@
                         </div>
                         <div class="card-body">
-                            <blockquote class="blockquote mb-0">
-                                <table class="display compact table-bordered" id="table-wagon" style="width:100%; table-layout: fixed"></table>
-                            </blockquote>
+                            <div class="row">
+                                <div class="col-xl-12" style="font-size:12px">
+                                    <table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>
+                                </div>
+                            </div>
+                            @*<blockquote class="blockquote mb-0">
+                            </blockquote>*@
                         </div>
                     </div>
                 </div>
@@ -71,15 +75,28 @@
     </div>
 </div>
 
-<div id="change_group_condition" title="" style="display:none">
-    <div class="alert" id="change_group_condition_alert"></div>
-    <form id="form_change_group_condition">
+<div id="edit_condition" title="" style="display:none">
+    <div class="alert" id="edit_condition_alert"></div>
+    <form id="form_edit_condition">
         <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="change_group_condition_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_wagons_condition:</label>
+            <label for="edit_condition_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_wagons_condition:</label>
             <div class="col-sm-7">
-                <select class="form-control" id="change_group_condition_arrival" name="change_group_condition_arrival"></select>
-                <div class="invalid-feedback">
-                </div>
+                <select class="form-control" id="edit_condition_arrival" name="edit_condition_arrival"></select>
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="edit_condition_type" class="col-sm-5 col-form-label">@IDSRWTResource.title_type_wagons:</label>
+            <div class="col-sm-7">
+                <select class="form-control" id="edit_condition_type" name="edit_condition_type"></select>
+                <div class="invalid-feedback"></div>
+            </div>
+        </div>
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="edit_condition_date_rem_vag" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_rem_vag:</label>
+            <div class="col-sm-7">
+                <input type="datetime" class="form-control" id="edit_condition_date_rem_vag" name="edit_condition_date_rem_vag">
+                <div class="invalid-feedback"></div>
             </div>
         </div>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
