start services park_state

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -146,9 +146,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-3" href="#">
-                            <h3>Service #3</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-3" href='@Url.Action("ParkState", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.park_state_title</h3>
+                            <p>@DirectoryResource.park_state_description</p>
                         </a>
                     </li>
                     <li>
