--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -57,18 +57,42 @@
                 </div>
                 <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
                     <div class="card">
-                        <div class="card-header" id="sostav_info">
-
-                            @*<label id="sostav_info"></label>*@
+                        <div class="card-header" id="park_state_info" style="text-transform:uppercase">
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-xl-12" style="font-size:12px">
-                                    <table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>
+                                <div class="col-xl-3">
+                                    <fieldset class="border-primary">
+                                        <legend class="text-primary">Пути</legend>
+                                        <div class="form-row">
+                                            <div class="col-xl-12 mb-1 text-left">
+                                                <div class="operator-detali-tables">
+                                                    <table id="ways-park-state" class="display compact hover row-border" style="width:100%;"></table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                                <div class="col-xl-9">
+                                    <fieldset class="border-primary">
+                                        <legend class="text-primary">Вагоны</legend>
+                                        <div class="operator-detali-tables">
+                                            @*<table id="wagons-dislocation-on" class="display compact hover row-border" style="width:100%; table-layout: fixed"></table>*@
+                                        </div>
+                                    </fieldset>
                                 </div>
                             </div>
-                            @*<blockquote class="blockquote mb-0">
-                                </blockquote>*@
+
+
+
+
+                            <div class="row">
+                                <div class="col-xl-12" style="font-size:12px">
+                                    @*<table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>*@
+
+                                    @*<div id="accordion_ways"></div>*@
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
