--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -76,8 +76,44 @@
                                 <div class="col-xl-9">
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">Вагоны</legend>
-                                        <div class="operator-detali-tables">
-                                            @*<table id="wagons-dislocation-on" class="display compact hover row-border" style="width:100%; table-layout: fixed"></table>*@
+                                        <div class="row">
+                                            <div class ="col-xl-12">
+                                                <div class="card border-primary mb-3">
+                                                    <div class="card-header">ДОБАВИТЬ СПИСКОМ</div>
+                                                    <div class="card-body">
+                                                        <div class="row">
+                                                            @*<div class="col-xl-1">
+                                                                <label for="num_cars_comparison" class="col-form-label">Перечень:</label>
+                                                            </div>*@
+                                                            <div class="col-xl-10">
+                                                                <div class="form-check">
+                                                                    <input type="checkbox" class="form-check-input" id="num_wagon_park_state_validation" style="position:relative">
+                                                                    <label class="form-check-label" for="num_wagon_park_state_validation">@DirectoryResource.title_add_edit_valodation_num</label>
+                                                                </div>
+                                                                <textarea class="form-control" id="num_wagon_park_state" name="num_wagon_park_state" rows="3" style="font-size:inherit"></textarea>
+                                                            </div>
+                                                            <div class="col-xl-2 align-content-center">
+                                                                <button type="button" class="btn btn-primary" id="num_wagon_park_state_add">Добавить</button>
+                                                                <button type="button" class="btn btn-primary" id="num_wagon_park_state_replace" disabled="disabled">Заменить</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-xl-12">
+                                                <div class="card border-primary mb-3">
+                                                    <div class="card-header">ПЕРЕЧЕНЬ ВАГОНОВ</div>
+                                                    <div class="card-body">
+                                                        <div class="row">
+                                                            <div class="col-xl-12 operator-detali-tables">
+                                                                <table id="wagon-park-state" class="display compact hover row-border" style="width:100%; table-layout: fixed"></table>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </fieldset>
                                 </div>
@@ -86,13 +122,13 @@
 
 
 
-                            <div class="row">
-                                <div class="col-xl-12" style="font-size:12px">
-                                    @*<table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>*@
+                            @*<div class="row">
+                                    <div class="col-xl-12" style="font-size:12px">
+                                        <table class="display compact hover row-border cell-border" id="table-wagon" style="width:100%; table-layout: fixed"></table>
 
-                                    @*<div id="accordion_ways"></div>*@
-                                </div>
-                            </div>
+                                        <div id="accordion_ways"></div>
+                                    </div>
+                                </div>*@
                         </div>
                     </div>
                 </div>
