--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -85,7 +85,7 @@
                         <a class="dropdown-item" href="#" id="report_apaca_kr">Заявка на участие с попутным Ком. Актом ст. КР.</a>
                         <a class="dropdown-item" href="#" id="report_apaca_kr_gl">Заявка на участие с попутным Ком. Актом ст. КР Гл.</a>
 
-                        <a class="dropdown-item" href="#" id="">Акт общей формы</a>
+                        <a class="dropdown-item" href="#" id="report_gfa">Акт общей формы</a>
                         <a class="dropdown-item" href="#" id="report_dg20">Накладная предприятия ДГ-20</a>
                         <a class="dropdown-item" href="#" id="">Путевая</a>
                     </div>
