upd report dg-20

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -1136,18 +1136,7 @@
                     <fieldset class="border-primary" style="margin-right:20px; width:200px;">
                         <legend class="text-primary">Вагоны</legend>
                         <div id="fs-list-nums">
-                            <ul id="list_nums" class="connectedSortable">
-                                @*<li class="ui-state-default">Item 1</li>
-                <li class="ui-state-default">Item 2</li>
-                <li class="ui-state-default">Item 3</li>
-                <li class="ui-state-default">Item 4</li>
-                <li class="ui-state-default">Item 5</li>
-                <li class="ui-state-default">Item 6</li>
-                <li class="ui-state-default">Item 7</li>
-                <li class="ui-state-default">Item 8</li>
-                <li class="ui-state-default">Item 9</li>
-                <li class="ui-state-default">Item 10</li>*@
-                            </ul>
+                            @*<ul id="list_nums" class="connectedSortable"></ul>*@
                         </div>
 
                     </fieldset>
@@ -1166,7 +1155,7 @@
                         <div id="fs-report-page2">
                             <ul id="report_page2" class="connectedSortable"></ul>
                         </div>
-
+                        @*<div class="name_division mb-1 mt-1 text-center text-primary font-weight-bold font-italic"></div>*@'
                     </fieldset>
                 </td>
             </tr>
