fix baf bad respon find nums period

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -990,7 +990,7 @@
                 <div id="loading-cars" class="text-danger" style="display:none">
                     Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                 </div>
-                <table class="display compact cell-border row-border hover mb-1" id="table-list-epd-car" style="width:900px;font-size:0.8rem;table-layout:fixed"></table>
+                <table class="display compact cell-border row-border hover mb-1" id="table-list-epd-car" style="width:900px;font-size:0.8rem"></table>
             </fieldset>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
@@ -1021,7 +1021,7 @@
             <div id="loading-cars" class="text-danger" style="display:none">
                 Поиск вагонов на подходах <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
             </div>
-            <table class="display compact cell-border row-border hover mb-1" id="table-list-manual-car" style="width:100%;font-size:0.8rem;table-layout:fixed"></table>
+            <table class="display compact cell-border row-border hover mb-1" id="table-list-manual-car" style="width:100%;font-size:0.8rem"></table>
         </fieldset>
         <!-- Allow form submission with keyboard without duplicating the dialog button -->
         <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
