--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -26,12 +26,14 @@
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
     <script src="~/Scripts/api/uz_sms.js"></script> <!-- Class API Работа с модулем согласования -->
 
+    <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
+
     <script src="~/Scripts/view/idsrwt/incoming.js"></script> <!--  -->
 }
 
-@*<input type="hidden" name="isLoggedIn" value="true" (or false) />*@
-
 <input id="username" type="hidden" value="@User.Identity.Name" />
+
+<div id="dialog-confirm"></div>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -163,7 +165,7 @@
     </form>
 </div>
 
-<div id="dialog-confirm" title="Empty the recycle bin?" style="display:none">
+<div id="dialog-confirm1" title="Empty the recycle bin?" style="display:none">
     <p id="dialog-confirm-text">
         <span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>
     </p>
@@ -215,6 +217,9 @@
                                                         <button type="button" class="btn btn-warning btn" id="search-car-num-doc" title="Найти ЭПД по номеру вагона" data-mode="edit-global" data-edit="" data-form="transceiver">
                                                             <i class="fa fa-search" aria-hidden="true"></i>
                                                         </button>
+                                                        @*<button type="button" class="btn btn-warning btn" id="search-car-num-doc-manual" title="Найти ЭПД по номеру вагона в ручную" data-mode="edit-global" data-edit="" data-form="transceiver">
+                                                            <i class="fa fa-search" aria-hidden="true"></i>
+                                                        </button>*@
                                                         <button type="button" class="btn btn-danger btn" id="edit-car-num-doc" title="Ввести данные в ручную" data-mode="edit-global" data-edit="" data-form="transceiver">
                                                             <i class="fa fa-edit" aria-hidden="true"></i>
                                                         </button>
