--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -108,7 +108,7 @@
                                                     <div class="card-body">
                                                         <div class="row">
                                                             <div class="col-xl-12 operator-detali-tables">
-                                                                <table id="wagon-park-state" class="display compact hover row-border" style="width:100%; table-layout: fixed"></table>
+                                                                <table id="wagon-park-state" class="display compact hover row-border" style="width:100%"></table>
                                                             </div>
                                                         </div>
                                                     </div>
